# file-uploader

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2024-01-27-062647_create_users/: up.sql
migrations/2024-02-17-070019_create_file_results/: down.sql  up.sql
src/: auth.rs  config.rs  lib.rs  main.rs  models.rs  schema.rs
src/bin_delete/: create_user.rs  lib.rs
src/database/: file_results.rs  mod.rs  users.rs
src/models/: users.rs
src/routes/: auth.rs  file.rs  mod.rs  users.rs
