[package]
name = "file-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["uuid", "json"] }
diesel = { version = "2.1.4", features = ["postgres"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
rocket_db_pools = {version = "0.1.0",  features = ["diesel_postgres"]}


